--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,37 @@
    text-shadow: 0cap;
   }
   /* style BRAYAN*/
+
+  /* style CARLA*/
+.general{
+    width: 100%;
+    height: 1125PX;
+    background-color:#CEECF5;
+  }
+
+.card{
+    margin: 10px;
+    padding: 5px; 
+    height: 310;
+    border-radius: 5px;
+    
+    display:flex;
+    flex-wrap:wrap;
+ 
+}
+
+.card1{
+    margin: 10px;
+    padding: 5px; 
+    height: 310;
+    border-radius: 5px;
+    background-color: rgb(37, 158, 33);
+    display:flex;
+    flex-wrap:wrap;
+}
+h5{
+    text-align: justify;
+}
+p{
+    text-align: justify;
+}
