--- a/styles-omar.css
+++ b/styles-omar.css
@@ -114,7 +114,7 @@
     margin: 2rem;
 }
 .facilities{
-    font-size: 60px;
+    font-size: 32px;
     font-family: 'Garamond';
     font-weight: 600;
 }
@@ -138,8 +138,8 @@
 }
 .first-image > img{
     object-fit: cover;
-    width: 950px;
-    height: 700px;
+    width: 850px;
+    height: 600px;
 }
 .name-services-product{
     margin-top: -3.2rem;
@@ -149,6 +149,15 @@
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 36px;
+}
+.title-card-services{
+    text-align: center;
+}
+.btn-services-card{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100px;
 }
 /* style BRAYAN*/
 .contenedor {
