--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,17 @@
   /* style BRAYAN*/
 
   /* style CARLA*/
+
+.card-nosotros{
+    padding: 2rem;
+}
+  
+.body-nosotros{
+    padding: 0 4rem;
+}
+
 .general{
     width: 100%;
-    height: 1125PX;
     background-color:#CEECF5;
   }
 
@@ -32,7 +40,6 @@
     padding: 5px; 
     height: 310;
     border-radius: 5px;
-    
     display:flex;
     flex-wrap:wrap;
  
@@ -53,3 +60,4 @@ h5{
 p{
     text-align: justify;
 }
+
