--- a/styles-omar.css
+++ b/styles-omar.css
@@ -1,6 +1,5 @@
 span {
   color: #007bff;
-  text-align: center;
 }
 
 p {
@@ -12,6 +11,141 @@ p {
 
 h2 {
   color: #0dcaf0;
+}
+
+.room-content {
+  padding: 4rem;
+}
+
+.img-room-content {
+  width: 600px;
+  height: 400px;
+  object-fit: cover;
+  margin: 0 auto;
+  align-items: center;
+  display: block;
+  max-width: 100%;
+  padding: 1rem;
+}
+
+.services-info {
+  text-align: center;
+  margin: 2rem;
+}
+
+.facilities {
+  font-size: 32px;
+  font-family: "Garamond";
+  font-weight: 600;
+}
+
+.services-info > p {
+  font-size: 22px;
+  padding: 4rem 7rem;
+  margin: 0 auto;
+}
+
+.services-image-products {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
+  padding: 0 4rem;
+  margin: 2rem 0;
+}
+
+.first-image {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.first-image > img {
+  object-fit: cover;
+  width: 850px;
+  height: 600px;
+}
+
+.name-services-product {
+  margin-top: -3.2rem;
+  color: black;
+  background-color: white;
+  padding: 0 6rem;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 36px;
+}
+
+.title-habitaciones {
+  text-align: center;
+  font-size: 36px;
+  font-family: "Garamond";
+  font-weight: 600;
+  padding-top: 2rem;
+}
+
+.icon-links {
+  margin-right: 1rem;
+}
+
+@media (min-width: 992px) {
+  .room-content {
+    padding: 1rem;
+  }
+  .services-info {
+    margin: 0;
+  }
+  .facilities {
+    font-size: 36px;
+  }
+  .services-info > p {
+    padding: 0.5rem 1rem;
+  }
+  .services-image-products {
+    padding: 0 1rem;
+    margin: 0.5rem 0;
+  }
+  .first-image > img {
+    width: 600;
+    height: 450px;
+  }
+  .name-services-product {
+    font-size: 24px;
+    padding: 0 2rem;
+    margin-top: -2rem;
+  }
+}
+@media (min-width: 576px) {
+  h2 {
+    color: black;
+    font-size: 34px;
+  }
+  p {
+    color: green;
+    font-size: 18px;
+  }
+  .room-content {
+    padding: 0;
+  }
+  .facilities {
+    font-size: 20pxpx;
+  }
+  .services-info > p {
+    padding: 0 0.5rem;
+  }
+  .services-image-products {
+    padding: 0;
+    margin: 0;
+  }
+  .first-image > img {
+    width: 300;
+    height: 200px;
+  }
+  .name-services-product {
+    font-size: 18px;
+    padding: 0;
+    margin-top: -1.2rem;
+  }
 }
 
 /*# sourceMappingURL=styles-omar.css.map */
