--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Montserrat:wght@300;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Montserrat:wght@400;500;600;700&display=swap');
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-/* style BRAYAN*/
-.contenedor {
-    width: 100%;
-    height: 100%;
-    padding: 25px;
-  }
-  .texto{
-   font-size: 100px;
-  }
-  .texto-contenido{
-   font-size: 30px;
-   text-shadow: 0cap;
-  }
-  .texto-borde {
-    /* -webkit-text-stroke: 2px black;
-    color: transparent;  */
-  
-    text-align:center; 
-  color: #e8e48a;
-  
-  font-family: impact;
-  font-size: 70px;
-  letter-spacing: 0;
-  text-shadow: -3px -3px 3px #59a9d7, 3px -3px 3px #0000DF, -3px 3px 3px #0000DF, 3px 3px 3px #0000DF;
-  }
-  .texto-segundario{
-    text-align:center; 
-  color: #ffffff;
-  
-  font-family: Sriracha;
-  font-size: 40px;
-  letter-spacing: 2PX;
-  text-shadow: -3px -3px 3px #59a9d7, 3px -3px 3px #000000, -3px 3px 3px #2d2d5a, 3px 3px 3px #0000DF;
-  }
-  /* style BRAYAN*/
-
-  /* style CARLA*/
-
-.card-nosotros{
-    padding: 2rem;
-}
-  
-.body-nosotros{
-    padding: 0 4rem;
+a {
+  color: #18dfbe;
 }
 
-.general{
-    width: 100%;
-    background-color:#CEECF5;
-  }
-
-.card{
-    margin: 10px;
-    padding: 5px; 
-    height: 310;
-    border-radius: 5px;
-    display:flex;
-    flex-wrap:wrap;
- 
+h1 {
+  color: #d81f1f;
 }
 
-.card1{
-    margin: 10px;
-    padding: 5px; 
-    height: 310;
-    border-radius: 5px;
-    background-color: rgb(37, 158, 33);
-    display:flex;
-    flex-wrap:wrap;
-}
-h5{
-    text-align: justify;
-}
-p{
-    text-align: justify;
-}
-
+h3 {
+  color: #10b938;
+} /*# sourceMappingURL=styles.css.map */
