--- a/style_luis.css
+++ b/style_luis.css
@@ -1,3 +1,14 @@
-h1 {
-  color: blue;
+@media (max-width: 600px) {
+  h2 {
+    background-color: blueviolet;
+  }
+  h2 {
+    color: aliceblue;
+  }
+  p {
+    background-color: blueviolet;
+  }
+  p {
+    color: white;
+  }
 }/*# sourceMappingURL=style_luis.css.map */
