--- a/styles -carla.css
+++ b/styles -carla.css
@@ -4,4 +4,10 @@ h1 {
 
 h5 {
   color: #c26c0a;
-} 
+}
+
+@media only screen and (max-width: 600px) {
+  h5 {
+    color: rgb(219, 33, 27);
+  }
+}/*# sourceMappingURL=styles -carla.css.map */
