--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,20 @@
-a {
-  color: #18dfbe;
-}
-
-h1 {
-  color: #d81f1f;
-}
-
-h3 {
-  color: #10b938;
-} /*# sourceMappingURL=styles.css.map */
+@media only screen and (max-width: 600px) {
+  a {
+    color: rgb(211, 18, 18);
+  }
+  font {
+    color: rgb(0, 46, 139);
+  }
+  nav {
+    background-color: rgb(162, 237, 25);
+  }
+  ul {
+    color: darkorchid;
+  }
+  span {
+    color: green;
+  }
+  head {
+    color: blueviolet;
+  }
+}/*# sourceMappingURL=styles.css.map */
