--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,13 +1,34 @@
-a {
-    color: #18dfbe;
-  }
+// a {
+//     color: #18dfbe;
+//   }
   
-  h1 {
-    color: #d81f1f;
-  }
+//   h1 {
+//     color: #beee12;
+//   }
   
-  h3 {
-    color: #10b938;
-  }/*# sourceMappingURL=styles.css.map */
+//   h3 {
+//     color: #10b938;
+//   }/*# sourceMappingURL=styles.css.map */
+
+  @media only screen and (max-width: 600px) {
+    a{
+      color: rgb(211, 18, 18);
+    }
+    font{
+      color: rgb(0, 46, 139);
+    }
+    nav{
+      background-color: rgb(162, 237, 25);
+    }
+    ul{
+      color: darkorchid;
+    }
+    span{
+      color: green;
+    }
+    head{
+      color: blueviolet;
+    }
+  }
   
   
