editando styles.scss

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,14 +1,18 @@
-// a {
-//     color: #18dfbe;
-//   }
-  
-//   h1 {
-//     color: #beee12;
-//   }
-  
-//   h3 {
-//     color: #10b938;
-//   }/*# sourceMappingURL=styles.css.map */
+
+a {
+  color: #f9f9f9;
+}
+
+h1 {
+  color: #09f8fc;
+}
+li{
+  color: brown;
+}
+
+h3 {
+  color: #000000;
+}
 
   @media only screen and (max-width: 600px) {
     a{
