--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
+a {
+  color: #f9f9f9;
+}
+
+h1 {
+  color: #09f8fc;
+}
+
+li {
+  color: brown;
+}
+
+h3 {
+  color: #000000;
+}
+
 @media only screen and (max-width: 600px) {
   a {
     color: rgb(211, 18, 18);
