--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ h3 {
   color: #000000;
 }
 
+nav {
+  color: #09f8fc;
+}
+
 @media only screen and (max-width: 600px) {
   a {
     color: rgb(211, 18, 18);
@@ -22,7 +26,7 @@ h3 {
     color: rgb(0, 46, 139);
   }
   nav {
-    background-color: rgb(162, 237, 25);
+    background-color: rgb(162, 238, 20);
   }
   ul {
     color: darkorchid;
