--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,6 +13,9 @@ li{
 h3 {
   color: #000000;
 }
+nav{
+  color: #09f8fc;
+}
 
   @media only screen and (max-width: 600px) {
     a{
@@ -22,7 +25,7 @@ h3 {
       color: rgb(0, 46, 139);
     }
     nav{
-      background-color: rgb(162, 237, 25);
+      background-color: rgb(162, 238, 20);
     }
     ul{
       color: darkorchid;
