--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ nav {
     color: rgb(0, 46, 139);
   }
   nav {
-    background-color: rgb(162, 238, 20);
+    background-color: blueviolet;
   }
   ul {
     color: darkorchid;
