--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,7 +25,7 @@ nav{
       color: rgb(0, 46, 139);
     }
     nav{
-      background-color: rgb(162, 238, 20);
+      background-color:blueviolet;
     }
     ul{
       color: darkorchid;
