--- a/style -carla.css
+++ b/style -carla.css
@@ -1,1 +1,16 @@
-/*# sourceMappingURL=style -carla.css.map */
+h1 {
+  color: #523728;
+}
+
+h5 {
+  color: #c26c0a;
+}
+
+@media only screen and (max-width: 600px) {
+  h5 {
+    color: rgb(16, 218, 208);
+  }
+  h1 {
+    color: red;
+  }
+}/*# sourceMappingURL=style -carla.css.map */
