--- a/style -carla.scss
+++ b/style -carla.scss
@@ -8,6 +8,9 @@ h1 {
   
   @media only screen and (max-width: 600px) {
     h5 {
-      color: rgb(219, 33, 27);
+      color: rgb(16, 218, 208);
+    }
+    h1{
+        color:red;
     }
   }
