--- a/style_luis.scss
+++ b/style_luis.scss
@@ -6,7 +6,18 @@
 }
 
 .btn-test:hover{
-  background-color: red;
+  background-color: greenyellow;
+  color: white;
+}
+
+
+.btn-test2 {
+  background-color: black;
+  color: white;
+}
+
+.btn-test2:hover{
+  background-color: greenyellow;
   color: white;
 }
 
@@ -36,5 +47,18 @@
     border: 1px solid white;
     color: violet;
   }
+
+  .btn-test2{
+    background-color: black;
+    border: 1px solid white;
+    color: violet;
+  }
+  
+  .btn-test2{
+    background-color: black;
+    border: 1px solid white;
+    color: violet;
+  }
+
 }
 
