--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,20 +1,23 @@
 
 a {
-  color: #f9f9f9;
+  color: #000000;
 }
 
 h1 {
-  color: #09f8fc;
+  color: #f40000;
 }
 li{
-  color: brown;
+  color: rgb(188, 8, 248);
 }
 
 h3 {
-  color: #000000;
+  color: #e8d210;
 }
 nav{
-  color: #09f8fc;
+  background-color:  #13a6e0;
+}
+.hot{
+  color: #f40000;
 }
 
   @media only screen and (max-width: 600px) {
@@ -35,6 +38,15 @@ nav{
     }
     head{
       color: blueviolet;
+    }
+    .hot{
+      color: #e8d210;
+    }
+    .title-nav{
+      color: #000000;
+    }
+    .textfoot{
+      color: #f40000;
     }
   }
   
