--- a/css/styles.scss
+++ b/css/styles.scss
@@ -28,7 +28,7 @@ nav{
       color: rgb(0, 46, 139);
     }
     nav{
-      background-color:blueviolet;
+      background-color:blueviolet;//color de fondo barra de navegacion
     }
     ul{
       color: darkorchid;
@@ -40,7 +40,7 @@ nav{
       color: blueviolet;
     }
     .hot{
-      color: #e8d210;
+      color: #e8d210;//barra de navegacion HOTEL CALIFORNIA
     }
     .title-nav{
       color: #000000;
