--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ nav {
 
 @media only screen and (max-width: 600px) {
   a {
-    color: rgb(211, 18, 18);
+    color: #DAF7A6;
   }
   font {
     color: rgb(0, 46, 139);
