--- a/styles-omar/omarstyles.css
+++ b/styles-omar/omarstyles.css
@@ -20,7 +20,8 @@ h2 {
 .img-room-content {
   width: 600px;
   height: 400px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin: 0 auto;
   align-items: center;
   display: block;
@@ -37,6 +38,7 @@ h2 {
   font-size: 32px;
   font-family: "Garamond";
   font-weight: 600;
+  padding: 2rem 0;
 }
 
 .services-info > p {
@@ -61,7 +63,8 @@ h2 {
 }
 
 .first-image > img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 850px;
   height: 600px;
 }
@@ -89,14 +92,21 @@ h2 {
 }
 
 @media (min-width: 992px) {
+  .title-habitaciones {
+    color: goldenrod;
+  }
+  .title-card-services {
+    text-align: center;
+  }
   .room-content {
     padding: 1rem;
   }
   .services-info {
-    margin: 0;
+    margin: 1rem;
   }
   .facilities {
     font-size: 36px;
+    padding: 2rem 0;
   }
   .services-info > p {
     padding: 0.5rem 1rem;
@@ -106,13 +116,26 @@ h2 {
     margin: 0.5rem 0;
   }
   .first-image > img {
-    width: 600;
-    height: 450px;
+    width: 500;
+    height: 400px;
+    border-radius: 2rem;
   }
   .name-services-product {
     font-size: 24px;
     padding: 0 2rem;
     margin-top: -2rem;
+  }
+  .btn-services-card {
+    display: flex;
+    width: 100px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .services-info > p {
+    padding: 2rem 2rem;
+  }
+  .first-image {
+    margin: 0 2rem;
   }
 }
 @media (min-width: 576px) {
@@ -124,6 +147,9 @@ h2 {
     color: green;
     font-size: 18px;
   }
+  .title-card-services {
+    text-align: center;
+  }
   .room-content {
     padding: 0;
   }
@@ -132,20 +158,77 @@ h2 {
   }
   .services-info > p {
     padding: 0 0.5rem;
+    font-size: 18px;
   }
   .services-image-products {
     padding: 0;
     margin: 0;
+    gap: 1rem;
   }
   .first-image > img {
-    width: 300;
     height: 200px;
+    border-radius: 2rem;
   }
   .name-services-product {
     font-size: 18px;
     padding: 0;
     margin-top: -1.2rem;
   }
+  .btn-services-card {
+    display: flex;
+    width: 100px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .first-image {
+    margin: 0 1rem;
+  }
 }
-
-/*# sourceMappingURL=styles-omar.css.map */
+@media (min-width: 360px) {
+  h2 {
+    color: black;
+    font-size: 34px;
+  }
+  p {
+    color: green;
+    font-size: 18px;
+  }
+  .title-card-services {
+    text-align: center;
+  }
+  .room-content {
+    padding: 0;
+  }
+  .facilities {
+    font-size: 20px;
+  }
+  .services-info > p {
+    padding: 0;
+    font-size: 18px;
+    margin: 0;
+  }
+  .services-image-products {
+    padding: 0;
+    margin: 0;
+    gap: 0.5rem;
+  }
+  .first-image > img {
+    height: 200px;
+    margin: 0 2rem;
+    border-radius: 1rem;
+  }
+  .name-services-product {
+    font-size: 18px;
+    padding: 0;
+    margin-top: -1.2rem;
+  }
+  .btn-services-card {
+    display: flex;
+    width: 100px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .first-image {
+    margin: 0 1rem;
+  }
+}/*# sourceMappingURL=omarstyles.css.map */
