--- a/styles-omar/omarstyles.scss
+++ b/styles-omar/omarstyles.scss
@@ -42,6 +42,7 @@ h2{
     font-size: 32px;
     font-family: 'Garamond';
     font-weight: 600;
+    padding: 2rem 0;
 }
 .services-info > p {
     font-size: 22px;
@@ -88,14 +89,22 @@ h2{
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+    .title-habitaciones{
+        color: goldenrod;
+    }
+    .title-card-services{
+        text-align: center;
+    }
     .room-content{
         padding: 1rem ;
     }
     .services-info{
-        margin: 0;
+        margin: 1rem;
     }
+    
     .facilities{
         font-size: 36px;
+        padding: 2rem 0;
     }
     .services-info > p{
         padding: .5rem 1rem;
@@ -105,26 +114,42 @@ h2{
         margin: .5rem 0;
     }
     .first-image > img {
-        width: 600;
-        height: 450px;
+        width: 500;
+        height: 400px;
+        border-radius: 2rem;
     }
     .name-services-product{
         font-size: 24px;
         padding: 0 2rem;
         margin-top: -2rem;
     }
+    .btn-services-card{
+        display: flex;
+        width: 100px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .services-info > p{
+        padding: 2rem 2rem;
+    }
+    .first-image{
+        margin: 0 2rem;
+    }
+    footer{
+        padding: .5rem 2rem;
+    }
 }
 
-
-// Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) { 
-    h2 {color: black;
+    h2 {color: violet;
         font-size: 34px;
         }
-    
     p {
-        color: green;
+        color: lightseagreen;
         font-size: 18px;
+    }
+    .title-card-services{
+        text-align: center;
     }
     .room-content{
         padding: 0;
@@ -134,19 +159,84 @@ h2{
     }
     .services-info > p{
         padding: 0 .5rem;
+        font-size: 18px;
     }
     .services-image-products{
         padding: 0;
         margin: 0;
+        gap: 1rem;
     }
     .first-image > img {
-        width: 300;
         height: 200px;
+        border-radius: 2rem;
     }
     .name-services-product{
         font-size: 18px;
         padding: 0;
         margin-top: -1.2rem;
     }
+    .btn-services-card{
+        display: flex;
+        width: 100px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .first-image{
+        margin: 0 1rem;
+    }
+    footer{
+        padding: .5rem 1.5rem;
+    }
+ }
 
+
+@media (min-width: 360px) { 
+    h2 {color: lightgray;
+        font-size: 34px;
+        }
+    p {
+        color: palevioletred;
+        font-size: 18px;
+    }
+    .title-card-services{
+        text-align: center;
+    }
+    .room-content{
+        padding: 0;
+    }
+    .facilities{
+        font-size: 20px;
+    }
+    .services-info > p{
+        padding: 0;
+        font-size: 18px;
+        margin: 0;
+    }
+    .services-image-products{
+        padding: 0;
+        margin: 0;
+        gap: .5rem;
+    }
+    .first-image > img {
+        height: 200px;
+        margin: 0 2rem;
+        border-radius: 1rem;
+    }
+    .name-services-product{
+        font-size: 18px;
+        padding: 0;
+        margin-top: -1.2rem;
+    }
+    .btn-services-card{
+        display: flex;
+        width: 100px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .first-image{
+        margin: 0 1rem;
+    }
+    footer{
+        padding: .5rem 1rem;
+    }
  }
